--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 idna==2.8
+jusText==2.2.0
+lxml==4.3.3
 requests==2.21.0
-soupsieve==1.8
+soupsieve==1.9.1
 tqdm==4.31.1
-urllib3==1.24.1
+urllib3==1.25.1
 wikipedia==1.4.0
