--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-beautifulsoup4==4.7.1
-certifi==2019.3.9
-chardet==3.0.4
-Click==7.0
-idna==2.8
-jusText==2.2.0
-lxml==4.3.3
-requests==2.21.0
-soupsieve==1.9.1
-tqdm==4.31.1
-urllib3==1.25.1
+beautifulsoup4==4.10.0
+certifi==2021.10.8
+chardet==4.0.0
+charset-normalizer==2.0.10
+click==8.0.3
+idna==3.3
+jusText==3.0.0
+lxml==4.7.1
+requests==2.27.1
+soupsieve==2.3.1
+tqdm==4.62.3
+urllib3==1.26.8
 wikipedia==1.4.0
